--- a/HimMemo/Base.lproj/Main.storyboard
+++ b/HimMemo/Base.lproj/Main.storyboard
@@ -101,7 +101,11 @@
                         <viewLayoutGuide key="safeArea" id="KWJ-JI-pCg"/>
                     </view>
                     <navigationItem key="navigationItem" title="새 메모" id="o0G-w4-Dfb">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="yXa-Ip-HJN"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="yXa-Ip-HJN">
+                            <connections>
+                                <action selector="cancelButton:" destination="SUl-fD-SI1" id="J7U-lr-LsY"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="jjb-c4-NeH"/>
                     </navigationItem>
                 </viewController>
